[gd_scene load_steps=11 format=2]

[ext_resource path="res://Actors/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Actors/Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Actors/Scripts/PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://Actors/Scripts/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://Actors/Scripts/States/Running.gd" type="Script" id=5]
[ext_resource path="res://Actors/Scripts/States/Jumping.gd" type="Script" id=6]
[ext_resource path="res://Actors/Scripts/States/Falling.gd" type="Script" id=7]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.5
radial_segments = 16

[sub_resource type="CapsuleShape" id=2]
height = 2.5

[sub_resource type="CylinderShape" id=3]

[node name="Player" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.27025, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40657, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.20498, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
collision_mask = 2

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Running" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
